fixed alignment correction

--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,8 @@
 	width: 100%;
 	display: flex;
 	flex-direction: column;
+	justify-content: center;
+	align-items: center;
 	background-color: #FFEEDD;
 
 }
